Fix filter elements on small screens

--- a/packages/commonwealth/client/scripts/views/components/Profile/ProfileActivity/TransactionsTab/TransactionsTab.scss
+++ b/packages/commonwealth/client/scripts/views/components/Profile/ProfileActivity/TransactionsTab/TransactionsTab.scss
@@ -56,6 +56,17 @@
       margin-left: auto;
       gap: 16px;
 
+      @include extraSmall {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: start;
+        width: 100%;
+
+        .CWSelectList {
+          min-width: 100% !important;
+        }
+      }
+
       .CWSelectList {
         min-width: 240px;
       }
